# EventBasedVisualOdometry

./: .gitattributes  .gitignore  CMakeLists.txt  CorrectDistortion.m  DiscretizeKeyframe.m  EVO.m  FindPoseToKfH.m  GetClusters.m  GetEventImage.m  GetEventImage_old.m  GetKeyFrameTimes.m  GetNewMapPoints.m  LICENSE  MedianFilterDepthMap.m  ProjectPointsToKfPlanes.m  README.md  RadiusFilterMap.m  TODO.txt  UpdateDSI.m  correct_distortion.m  custom_quat2rotm.m  getMapPoints.m  known_issues.md  makeKfHomographies.m  notes.txt  package.xml  playback_data.m  shapes_translation_calib.mat  test.m  update_dsi_data.mat  warpH.m  warpH_rect.m  warpH_resize.m
data_extraction_scripts/: ReadEventsData.m  read_events_data.m  read_ground_truth_data.m
doc/: Doxyfile
doc/html/: annotated.html  classImageConverter-members.html  classImageConverter.html  classImageConverter__coll__graph.map  classImageConverter__coll__graph.md5  classemvs_1_1EmvsNode-members.html  classemvs_1_1EmvsNode.html  classemvs_1_1KeyframeDSI-members.html  classemvs_1_1KeyframeDSI.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_dfdbda394c3f7a3aa55229f33a559c41.html  emvs__node_8h_source.html  files.html  filters_8h_source.html  graph_legend.html  index.html  keyframe__dsi_8h_source.html  md__home_kazu_catkin_ws_src_evo_README.html  pages.html  utilities_8h_source.html
doc/html/search/: all_0.js  all_2.js  pages_0.js  searchdata.js
doc/results/: map_pointcloud_kf_4_r_015_neigh_2.fig  map_pointcloud_kf_4_r_015_neigh_2_angle.fig  map_pointcloud_kf_4_r_07_neigh_min30.fig  map_pointcloud_kf_5_r_015_neigh_2_angle.fig
docker/: Makefile  TODO.txt  run.sh
docker/base/: Dockerfile
docker/evo/: Dockerfile
docker/ros/: Dockerfile
docker/tools/: Dockerfile
include/: emvs_node.h  filters.h  image_converter.h  keyframe_dsi.h  matlab_utils.h  matrix_utils.h  opencv_defs.h  utilities.h
launch/: filter_configs.yaml  map_viz.rviz  test_emvs.launch
matlab/: CustomQuat2RotM.m  GetEventImage.m  RadiusFilterMap.m
results/: map_pointcloud_kf_4.fig  map_pointcloud_kf_4_r_015_neigh_3.fig  map_pointcloud_kf_4_r_07_neigh_min30_angle.fig  map_pointcloud_kf_5_r_015_neigh_2.fig
src/: filters.cpp
src/MATLAB/: DiscretizeKeyframe.m  EMVS.m  EVO.m  ExtractData.m  FindPoseToKfH.m  GetClusters.m  GetNewMapPoints.m  MedianFilterDepthMap.m  PlaybackData.m  PlotResults.m  UpdateDSI.m  evo_test.m  warpH_rect.m
src/cpp/: emvs_node.cpp  filters.cpp  image_converter.cpp  keyframe_dsi.cpp  matlab_utils.cpp  matrix_utils.cpp  test.cpp  test_image_converter.cpp  test_linspace.cpp  test_opencv.cpp  test_pcl.cpp  utilities.cpp
test/: filter_tests.cpp  notes.md
